assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro:wght@300&display=swap');

*{
    margin:0;
    padding: 0;
    border: none;
}
h1, h2{
    font-family: Oswald , sans-serif;
    font-size: 210%;
}
#banner{
    background-color: #eae7b1;
    overflow: hidden;
    height: 150px;
    border-bottom: 2px solid #2c443c;
}
#logo{
    float: left;
    width: 25%;
    text-align: center;
    line-height: 150px;
    text-transform: uppercase;
    color: #3c6255;
    font-weight: 700;
    justify-content: center;
    font-size: 250%;

}

/* navigation styling  */
#menu{
    float: right;
    width:75%;
    text-align: center;
    line-height: 150px;
    
}
#menu li{
    display: inline;
    margin-right: 50px;
    text-align: center;
    width:15%;
    
}
/* styling links */
#menu li a, #logo a{
    text-decoration: none;
    font-family: oswald,sans-serif;
    text-transform: uppercase;
    color: #eae7b1;
    font-weight: 600;
    letter-spacing: 4px;
    border:10px;
}
#menu li a{
    padding:20px 20px;
}
#logo a{
    color: #3c6255;
}
.nav-button{
    border-right: 1px solid #2c443c;
    padding: 5px 0 6px 5px;
    box-shadow:  0 0 6px  0 #2c443c;
    border-radius: 5px;
    background-color: #3c6255;
    transition: transform 0.5s ease-out;
}
.nav-button:active{
    box-shadow: none;
    transform:translateY(-5px);
}
.nav-button:hover{
    box-shadow: none;
    transform:translateY(-5px);
}
#menu li a:hover{
    cursor:pointer;
}


/* button style */

#subscribe{
    float: right;
    width:33%;
    text-align: center;
    justify-content: center;
}
#newsletter{
    text-align: center;
    display: inline-block;
    justify-content: center;
    padding: 10px;
    border:1px solid black;
    border-radius: 5px;
    text-transform: uppercase;
    font-family: oswald, sans-serif;
    font-weight: 600;
    letter-spacing: 4px;
    color: #eae7b1;
    background-color: #3c6255;
    box-shadow: 0 5px 0 #2c443c;
    transition: transform 0.1s ease-out;
}
#newsletter:active{
    box-shadow: none;
    transform:translateY(5px);
}

/* hero image and cover text */

#hero-image{
    width: 100%;
    height: 450px;
    background: url('../images/cm-hero-img.png') no-repeat center center;
    background-size: cover;
    animation-name: hero-zoom;
    animation-duration: 6s;
    animation-fill-mode: forwards;
}
#hero-outer{
    position: relative;
    height: 450px;
    width:100%;
    overflow: hidden;

}

@keyframes hero-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.05);
    }
}

/* cover text */
#cover-text, #cover-text h2{
   color: rgba(60, 98, 85, 0.8);
   text-align: center;
   line-height: 50px;
   letter-spacing: 4px;
}
#cover-text h2{
    padding-bottom: 20px;
}
#cover-text{
    font-size: 130%;
    font-family: oswald,sans-serif;
    text-transform: capitalize;
    letter-spacing: 4px;
    width: 1000px;
    height: 50px;
    padding-top:25px; 
    padding-left: 10px;
    padding-right: 20px;
    padding-bottom: 25px;
    background-color: rgba(234, 231, 177, 0.9);

    bottom: 200px;
    top:200px;
    /* right and left values that best align cover text with background images */
    /* right:548px; */
    left:329.45px;
    position: absolute;

    border-radius: 10px;
}
#reasons{
    width: 100%;
    height:75px;
    text-align: center;
    text-transform: capitalize;
    background-color: #eeecce;
    color: #2c443c;
    line-height: 75px;
    letter-spacing: 4px;
    padding:15px 0;
    border-bottom: 2px solid #2c443c;
    border-top: 2px solid #2c443c;
}

.reason-ing{
    display:inline-block;
    float: left;
    width:33%;
    height:450px;
    background-color:wheat;
    
}
.fast-or-freeze{
    display:inline-block;
    float: right;
    width:33%;
    height:450px;
    background-color: white;
   
}
.goodness{
    display:inline-block;
    margin: 0 auto;
    width:33%;
    height:450px;
    background-color: white;
    
}
.reason-heading{
    width:100%;
    height:15%;
    line-height: 25px;
    font-weight: 600;
    font-family: oswald, sans-serif;
    color: #2c443c;
    text-align: center;
    padding-top: 25px;
    border-bottom: 2px solid #2c443c;

}
/* text containers under 'why follow us' */
.reason-text-container {
    width: 100%;
    height:30%;
    margin: 0 auto;
    background-color: red;
}
.reason-photo-container{
    width: 150px;
    height:150px;
    background-color: transparent;
    margin: 0 auto;
    border:3px solid #2c443c;
    border-radius: 50%;
}
.reason-text{
    height: 100px;
    width:66%;
    margin: 0 auto;
    font-family: source sans serif, sans-serif;
    font-weight: 500;
    letter-spacing: 2px;
    text-align: left;
    padding-top: 5px ;
}

